--- a/tests/basic_tests.vcxproj
+++ b/tests/basic_tests.vcxproj
@@ -54,6 +54,10 @@
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.1.8.1.4\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.targets" Condition="Exists('..\packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.1.8.1.4\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.targets')" />
     <Import Project="..\packages\nlohmann.json.3.9.1\build\native\nlohmann.json.targets" Condition="Exists('..\packages\nlohmann.json.3.9.1\build\native\nlohmann.json.targets')" />
+    <Import Project="..\packages\SiddiqSoft.acw32h.2.6.1\build\native\SiddiqSoft.acw32h.targets" Condition="Exists('..\packages\SiddiqSoft.acw32h.2.6.1\build\native\SiddiqSoft.acw32h.targets')" />
+    <Import Project="..\packages\SiddiqSoft.string2map.2.2.2\build\native\SiddiqSoft.string2map.targets" Condition="Exists('..\packages\SiddiqSoft.string2map.2.2.2\build\native\SiddiqSoft.string2map.targets')" />
+    <Import Project="..\packages\SiddiqSoft.SplitUri.1.6.3\build\native\SiddiqSoft.SplitUri.targets" Condition="Exists('..\packages\SiddiqSoft.SplitUri.1.6.3\build\native\SiddiqSoft.SplitUri.targets')" />
+    <Import Project="..\packages\SiddiqSoft.restcl.0.5.4\build\native\SiddiqSoft.restcl.targets" Condition="Exists('..\packages\SiddiqSoft.restcl.0.5.4\build\native\SiddiqSoft.restcl.targets')" />
   </ImportGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -110,5 +114,9 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.1.8.1.4\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.1.8.1.4\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.targets'))" />
     <Error Condition="!Exists('..\packages\nlohmann.json.3.9.1\build\native\nlohmann.json.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\nlohmann.json.3.9.1\build\native\nlohmann.json.targets'))" />
+    <Error Condition="!Exists('..\packages\SiddiqSoft.acw32h.2.6.1\build\native\SiddiqSoft.acw32h.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.acw32h.2.6.1\build\native\SiddiqSoft.acw32h.targets'))" />
+    <Error Condition="!Exists('..\packages\SiddiqSoft.string2map.2.2.2\build\native\SiddiqSoft.string2map.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.string2map.2.2.2\build\native\SiddiqSoft.string2map.targets'))" />
+    <Error Condition="!Exists('..\packages\SiddiqSoft.SplitUri.1.6.3\build\native\SiddiqSoft.SplitUri.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.SplitUri.1.6.3\build\native\SiddiqSoft.SplitUri.targets'))" />
+    <Error Condition="!Exists('..\packages\SiddiqSoft.restcl.0.5.4\build\native\SiddiqSoft.restcl.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.restcl.0.5.4\build\native\SiddiqSoft.restcl.targets'))" />
   </Target>
 </Project>
