--- a/tests/basic_tests.vcxproj
+++ b/tests/basic_tests.vcxproj
@@ -44,7 +44,10 @@
     <EnableClangTidyCodeAnalysis>false</EnableClangTidyCodeAnalysis>
   </PropertyGroup>
   <ItemGroup>
-    <ClCompile Include="test.cpp" />
+    <ClCompile Include="CosmosClient.cpp" />
+    <ClCompile Include="CosmosCollection.cpp" />
+    <ClCompile Include="CosmosConnectionString.cpp" />
+    <ClCompile Include="CosmosDatabase.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -53,11 +56,12 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.1.8.1.4\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.targets" Condition="Exists('..\packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.1.8.1.4\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.targets')" />
-    <Import Project="..\packages\nlohmann.json.3.9.1\build\native\nlohmann.json.targets" Condition="Exists('..\packages\nlohmann.json.3.9.1\build\native\nlohmann.json.targets')" />
     <Import Project="..\packages\SiddiqSoft.acw32h.2.6.1\build\native\SiddiqSoft.acw32h.targets" Condition="Exists('..\packages\SiddiqSoft.acw32h.2.6.1\build\native\SiddiqSoft.acw32h.targets')" />
     <Import Project="..\packages\SiddiqSoft.string2map.2.2.2\build\native\SiddiqSoft.string2map.targets" Condition="Exists('..\packages\SiddiqSoft.string2map.2.2.2\build\native\SiddiqSoft.string2map.targets')" />
-    <Import Project="..\packages\SiddiqSoft.SplitUri.1.6.3\build\native\SiddiqSoft.SplitUri.targets" Condition="Exists('..\packages\SiddiqSoft.SplitUri.1.6.3\build\native\SiddiqSoft.SplitUri.targets')" />
-    <Import Project="..\packages\SiddiqSoft.restcl.0.5.4\build\native\SiddiqSoft.restcl.targets" Condition="Exists('..\packages\SiddiqSoft.restcl.0.5.4\build\native\SiddiqSoft.restcl.targets')" />
+    <Import Project="..\packages\nlohmann.json.3.10.0\build\native\nlohmann.json.targets" Condition="Exists('..\packages\nlohmann.json.3.10.0\build\native\nlohmann.json.targets')" />
+    <Import Project="..\packages\SiddiqSoft.SplitUri.1.6.4\build\native\SiddiqSoft.SplitUri.targets" Condition="Exists('..\packages\SiddiqSoft.SplitUri.1.6.4\build\native\SiddiqSoft.SplitUri.targets')" />
+    <Import Project="..\packages\SiddiqSoft.restcl.0.5.5\build\native\SiddiqSoft.restcl.targets" Condition="Exists('..\packages\SiddiqSoft.restcl.0.5.5\build\native\SiddiqSoft.restcl.targets')" />
+    <Import Project="..\packages\SiddiqSoft.RWLEnvelope.1.1.0\build\native\SiddiqSoft.RWLEnvelope.targets" Condition="Exists('..\packages\SiddiqSoft.RWLEnvelope.1.1.0\build\native\SiddiqSoft.RWLEnvelope.targets')" />
   </ImportGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -113,10 +117,11 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.1.8.1.4\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.1.8.1.4\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.targets'))" />
-    <Error Condition="!Exists('..\packages\nlohmann.json.3.9.1\build\native\nlohmann.json.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\nlohmann.json.3.9.1\build\native\nlohmann.json.targets'))" />
     <Error Condition="!Exists('..\packages\SiddiqSoft.acw32h.2.6.1\build\native\SiddiqSoft.acw32h.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.acw32h.2.6.1\build\native\SiddiqSoft.acw32h.targets'))" />
     <Error Condition="!Exists('..\packages\SiddiqSoft.string2map.2.2.2\build\native\SiddiqSoft.string2map.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.string2map.2.2.2\build\native\SiddiqSoft.string2map.targets'))" />
-    <Error Condition="!Exists('..\packages\SiddiqSoft.SplitUri.1.6.3\build\native\SiddiqSoft.SplitUri.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.SplitUri.1.6.3\build\native\SiddiqSoft.SplitUri.targets'))" />
-    <Error Condition="!Exists('..\packages\SiddiqSoft.restcl.0.5.4\build\native\SiddiqSoft.restcl.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.restcl.0.5.4\build\native\SiddiqSoft.restcl.targets'))" />
+    <Error Condition="!Exists('..\packages\nlohmann.json.3.10.0\build\native\nlohmann.json.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\nlohmann.json.3.10.0\build\native\nlohmann.json.targets'))" />
+    <Error Condition="!Exists('..\packages\SiddiqSoft.SplitUri.1.6.4\build\native\SiddiqSoft.SplitUri.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.SplitUri.1.6.4\build\native\SiddiqSoft.SplitUri.targets'))" />
+    <Error Condition="!Exists('..\packages\SiddiqSoft.restcl.0.5.5\build\native\SiddiqSoft.restcl.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.restcl.0.5.5\build\native\SiddiqSoft.restcl.targets'))" />
+    <Error Condition="!Exists('..\packages\SiddiqSoft.RWLEnvelope.1.1.0\build\native\SiddiqSoft.RWLEnvelope.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.RWLEnvelope.1.1.0\build\native\SiddiqSoft.RWLEnvelope.targets'))" />
   </Target>
 </Project>
