--- a/tests/packages.config
+++ b/tests/packages.config
@@ -5,6 +5,7 @@
   <package id="SiddiqSoft.acw32h" version="2.6.1" targetFramework="native" />
   <package id="SiddiqSoft.AzureCppUtils" version="1.0.1" targetFramework="native" />
   <package id="SiddiqSoft.restcl" version="0.5.5" targetFramework="native" />
+  <package id="SiddiqSoft.RunOnEnd" version="1.2.0" targetFramework="native" />
   <package id="SiddiqSoft.RWLEnvelope" version="1.1.0" targetFramework="native" />
   <package id="SiddiqSoft.SplitUri" version="1.6.4" targetFramework="native" />
   <package id="SiddiqSoft.string2map" version="2.2.2" targetFramework="native" />
