--- a/nuget/SiddiqSoft.CosmosClient.nuspec
+++ b/nuget/SiddiqSoft.CosmosClient.nuspec
@@ -24,6 +24,7 @@
     <!-- Dependencies -->
     <dependencies>
       <dependency id="nlohmann.json" version="3.10"/>
+      <dependency id="SiddiqSoft.AzureCppUtils" version="1.2"/>
       <dependency id="SiddiqSoft.restcl" version="0.5"/>
       <dependency id="SiddiqSoft.RWLEnvelope" version="1"/>
     </dependencies>
