--- a/tests/basic_tests.vcxproj
+++ b/tests/basic_tests.vcxproj
@@ -46,7 +46,7 @@
   <ItemGroup>
     <ClCompile Include="CosmosClient.cpp" />
     <ClCompile Include="CosmosCollection.cpp" />
-    <ClCompile Include="CosmosConnectionString.cpp" />
+    <ClCompile Include="CosmosConnection.cpp" />
     <ClCompile Include="CosmosDatabase.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -58,12 +58,12 @@
     <Import Project="..\packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.1.8.1.4\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.targets" Condition="Exists('..\packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.1.8.1.4\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.targets')" />
     <Import Project="..\packages\SiddiqSoft.acw32h.2.6.1\build\native\SiddiqSoft.acw32h.targets" Condition="Exists('..\packages\SiddiqSoft.acw32h.2.6.1\build\native\SiddiqSoft.acw32h.targets')" />
     <Import Project="..\packages\SiddiqSoft.string2map.2.2.2\build\native\SiddiqSoft.string2map.targets" Condition="Exists('..\packages\SiddiqSoft.string2map.2.2.2\build\native\SiddiqSoft.string2map.targets')" />
-    <Import Project="..\packages\nlohmann.json.3.10.0\build\native\nlohmann.json.targets" Condition="Exists('..\packages\nlohmann.json.3.10.0\build\native\nlohmann.json.targets')" />
-    <Import Project="..\packages\SiddiqSoft.SplitUri.1.6.4\build\native\SiddiqSoft.SplitUri.targets" Condition="Exists('..\packages\SiddiqSoft.SplitUri.1.6.4\build\native\SiddiqSoft.SplitUri.targets')" />
-    <Import Project="..\packages\SiddiqSoft.restcl.0.5.5\build\native\SiddiqSoft.restcl.targets" Condition="Exists('..\packages\SiddiqSoft.restcl.0.5.5\build\native\SiddiqSoft.restcl.targets')" />
     <Import Project="..\packages\SiddiqSoft.RWLEnvelope.1.1.0\build\native\SiddiqSoft.RWLEnvelope.targets" Condition="Exists('..\packages\SiddiqSoft.RWLEnvelope.1.1.0\build\native\SiddiqSoft.RWLEnvelope.targets')" />
     <Import Project="..\packages\SiddiqSoft.RunOnEnd.1.2.0\build\native\SiddiqSoft.RunOnEnd.targets" Condition="Exists('..\packages\SiddiqSoft.RunOnEnd.1.2.0\build\native\SiddiqSoft.RunOnEnd.targets')" />
-    <Import Project="..\packages\SiddiqSoft.AzureCppUtils.1.1.0\build\native\SiddiqSoft.AzureCppUtils.targets" Condition="Exists('..\packages\SiddiqSoft.AzureCppUtils.1.1.0\build\native\SiddiqSoft.AzureCppUtils.targets')" />
+    <Import Project="..\packages\nlohmann.json.3.10.1\build\native\nlohmann.json.targets" Condition="Exists('..\packages\nlohmann.json.3.10.1\build\native\nlohmann.json.targets')" />
+    <Import Project="..\packages\SiddiqSoft.AzureCppUtils.1.2.2\build\native\SiddiqSoft.AzureCppUtils.targets" Condition="Exists('..\packages\SiddiqSoft.AzureCppUtils.1.2.2\build\native\SiddiqSoft.AzureCppUtils.targets')" />
+    <Import Project="..\packages\SiddiqSoft.SplitUri.1.6.5\build\native\SiddiqSoft.SplitUri.targets" Condition="Exists('..\packages\SiddiqSoft.SplitUri.1.6.5\build\native\SiddiqSoft.SplitUri.targets')" />
+    <Import Project="..\packages\SiddiqSoft.restcl.0.5.6\build\native\SiddiqSoft.restcl.targets" Condition="Exists('..\packages\SiddiqSoft.restcl.0.5.6\build\native\SiddiqSoft.restcl.targets')" />
   </ImportGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -121,11 +121,11 @@
     <Error Condition="!Exists('..\packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.1.8.1.4\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.1.8.1.4\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.targets'))" />
     <Error Condition="!Exists('..\packages\SiddiqSoft.acw32h.2.6.1\build\native\SiddiqSoft.acw32h.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.acw32h.2.6.1\build\native\SiddiqSoft.acw32h.targets'))" />
     <Error Condition="!Exists('..\packages\SiddiqSoft.string2map.2.2.2\build\native\SiddiqSoft.string2map.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.string2map.2.2.2\build\native\SiddiqSoft.string2map.targets'))" />
-    <Error Condition="!Exists('..\packages\nlohmann.json.3.10.0\build\native\nlohmann.json.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\nlohmann.json.3.10.0\build\native\nlohmann.json.targets'))" />
-    <Error Condition="!Exists('..\packages\SiddiqSoft.SplitUri.1.6.4\build\native\SiddiqSoft.SplitUri.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.SplitUri.1.6.4\build\native\SiddiqSoft.SplitUri.targets'))" />
-    <Error Condition="!Exists('..\packages\SiddiqSoft.restcl.0.5.5\build\native\SiddiqSoft.restcl.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.restcl.0.5.5\build\native\SiddiqSoft.restcl.targets'))" />
     <Error Condition="!Exists('..\packages\SiddiqSoft.RWLEnvelope.1.1.0\build\native\SiddiqSoft.RWLEnvelope.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.RWLEnvelope.1.1.0\build\native\SiddiqSoft.RWLEnvelope.targets'))" />
     <Error Condition="!Exists('..\packages\SiddiqSoft.RunOnEnd.1.2.0\build\native\SiddiqSoft.RunOnEnd.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.RunOnEnd.1.2.0\build\native\SiddiqSoft.RunOnEnd.targets'))" />
-    <Error Condition="!Exists('..\packages\SiddiqSoft.AzureCppUtils.1.1.0\build\native\SiddiqSoft.AzureCppUtils.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.AzureCppUtils.1.1.0\build\native\SiddiqSoft.AzureCppUtils.targets'))" />
+    <Error Condition="!Exists('..\packages\nlohmann.json.3.10.1\build\native\nlohmann.json.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\nlohmann.json.3.10.1\build\native\nlohmann.json.targets'))" />
+    <Error Condition="!Exists('..\packages\SiddiqSoft.AzureCppUtils.1.2.2\build\native\SiddiqSoft.AzureCppUtils.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.AzureCppUtils.1.2.2\build\native\SiddiqSoft.AzureCppUtils.targets'))" />
+    <Error Condition="!Exists('..\packages\SiddiqSoft.SplitUri.1.6.5\build\native\SiddiqSoft.SplitUri.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.SplitUri.1.6.5\build\native\SiddiqSoft.SplitUri.targets'))" />
+    <Error Condition="!Exists('..\packages\SiddiqSoft.restcl.0.5.6\build\native\SiddiqSoft.restcl.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.restcl.0.5.6\build\native\SiddiqSoft.restcl.targets'))" />
   </Target>
 </Project>
