--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,8 +60,8 @@ steps:
     targetType: 'inline'
     script: |
       Write-Host "Run GoogleTest: basic_tests.exe..."
-      
       cd output\Release
+      dir .
       basic_tests.exe --gtest_output=xml:..\..\TestResults\
   env:
     CCTEST_PRIMARY_CS: $(CCTEST_PRIMARY_CS)
