--- a/nuget/SiddiqSoft.CosmosClient.nuspec
+++ b/nuget/SiddiqSoft.CosmosClient.nuspec
@@ -25,7 +25,7 @@
     <dependencies>
       <dependency id="nlohmann.json" version="3.10"/>
       <dependency id="SiddiqSoft.AzureCppUtils" version="1.2"/>
-      <dependency id="SiddiqSoft.restcl" version="0.5"/>
+      <dependency id="SiddiqSoft.restcl" version="0.6"/>
       <dependency id="SiddiqSoft.RWLEnvelope" version="1"/>
     </dependencies>
   </metadata>
@@ -43,6 +43,6 @@
     <file src="..\README.md" target="docs\" />
 
     <!-- MSBuild .targets files -->
-    <file src="SiddiqSoft.RWLContainer.targets" target="build\native" />
+    <file src="SiddiqSoft.CosmosClient.targets" target="build\native" />
   </files>
 </package>
