--- a/tests/basic_tests.vcxproj
+++ b/tests/basic_tests.vcxproj
@@ -35,8 +35,9 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(SolutionDir)output\$(Configuration)\</OutDir>
-    <RunCodeAnalysis>true</RunCodeAnalysis>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
     <EnableClangTidyCodeAnalysis>false</EnableClangTidyCodeAnalysis>
+    <EnableMicrosoftCodeAnalysis>false</EnableMicrosoftCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)output\$(Configuration)\</OutDir>
@@ -44,7 +45,9 @@
     <EnableClangTidyCodeAnalysis>false</EnableClangTidyCodeAnalysis>
   </PropertyGroup>
   <ItemGroup>
-    <ClCompile Include="test.cpp" />
+    <ClCompile Include="CosmosClient.cpp" />
+    <ClCompile Include="CosmosEndpoint.cpp" />
+    <ClCompile Include="CosmosConnection.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -53,7 +56,14 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.1.8.1.4\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.targets" Condition="Exists('..\packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.1.8.1.4\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.targets')" />
-    <Import Project="..\packages\nlohmann.json.3.9.1\build\native\nlohmann.json.targets" Condition="Exists('..\packages\nlohmann.json.3.9.1\build\native\nlohmann.json.targets')" />
+    <Import Project="..\packages\SiddiqSoft.acw32h.2.6.1\build\native\SiddiqSoft.acw32h.targets" Condition="Exists('..\packages\SiddiqSoft.acw32h.2.6.1\build\native\SiddiqSoft.acw32h.targets')" />
+    <Import Project="..\packages\SiddiqSoft.string2map.2.2.2\build\native\SiddiqSoft.string2map.targets" Condition="Exists('..\packages\SiddiqSoft.string2map.2.2.2\build\native\SiddiqSoft.string2map.targets')" />
+    <Import Project="..\packages\SiddiqSoft.RWLEnvelope.1.1.0\build\native\SiddiqSoft.RWLEnvelope.targets" Condition="Exists('..\packages\SiddiqSoft.RWLEnvelope.1.1.0\build\native\SiddiqSoft.RWLEnvelope.targets')" />
+    <Import Project="..\packages\SiddiqSoft.RunOnEnd.1.2.0\build\native\SiddiqSoft.RunOnEnd.targets" Condition="Exists('..\packages\SiddiqSoft.RunOnEnd.1.2.0\build\native\SiddiqSoft.RunOnEnd.targets')" />
+    <Import Project="..\packages\nlohmann.json.3.10.1\build\native\nlohmann.json.targets" Condition="Exists('..\packages\nlohmann.json.3.10.1\build\native\nlohmann.json.targets')" />
+    <Import Project="..\packages\SiddiqSoft.AzureCppUtils.1.2.2\build\native\SiddiqSoft.AzureCppUtils.targets" Condition="Exists('..\packages\SiddiqSoft.AzureCppUtils.1.2.2\build\native\SiddiqSoft.AzureCppUtils.targets')" />
+    <Import Project="..\packages\SiddiqSoft.SplitUri.1.7.0\build\native\SiddiqSoft.SplitUri.targets" Condition="Exists('..\packages\SiddiqSoft.SplitUri.1.7.0\build\native\SiddiqSoft.SplitUri.targets')" />
+    <Import Project="..\packages\SiddiqSoft.restcl.0.6.1\build\native\SiddiqSoft.restcl.targets" Condition="Exists('..\packages\SiddiqSoft.restcl.0.6.1\build\native\SiddiqSoft.restcl.targets')" />
   </ImportGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -61,7 +71,7 @@
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_WIN64;X64;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_WIN64;X64;COSMOSCLIENT_TESTING_MODE;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
@@ -84,7 +94,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
-      <PreprocessorDefinitions>_WIN64;X64;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_WIN64;X64;COSMOSCLIENT_TESTING_MODE;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
@@ -109,6 +119,13 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.1.8.1.4\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.1.8.1.4\build\native\Microsoft.googletest.v140.windesktop.msvcstl.static.rt-static.targets'))" />
-    <Error Condition="!Exists('..\packages\nlohmann.json.3.9.1\build\native\nlohmann.json.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\nlohmann.json.3.9.1\build\native\nlohmann.json.targets'))" />
+    <Error Condition="!Exists('..\packages\SiddiqSoft.acw32h.2.6.1\build\native\SiddiqSoft.acw32h.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.acw32h.2.6.1\build\native\SiddiqSoft.acw32h.targets'))" />
+    <Error Condition="!Exists('..\packages\SiddiqSoft.string2map.2.2.2\build\native\SiddiqSoft.string2map.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.string2map.2.2.2\build\native\SiddiqSoft.string2map.targets'))" />
+    <Error Condition="!Exists('..\packages\SiddiqSoft.RWLEnvelope.1.1.0\build\native\SiddiqSoft.RWLEnvelope.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.RWLEnvelope.1.1.0\build\native\SiddiqSoft.RWLEnvelope.targets'))" />
+    <Error Condition="!Exists('..\packages\SiddiqSoft.RunOnEnd.1.2.0\build\native\SiddiqSoft.RunOnEnd.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.RunOnEnd.1.2.0\build\native\SiddiqSoft.RunOnEnd.targets'))" />
+    <Error Condition="!Exists('..\packages\nlohmann.json.3.10.1\build\native\nlohmann.json.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\nlohmann.json.3.10.1\build\native\nlohmann.json.targets'))" />
+    <Error Condition="!Exists('..\packages\SiddiqSoft.AzureCppUtils.1.2.2\build\native\SiddiqSoft.AzureCppUtils.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.AzureCppUtils.1.2.2\build\native\SiddiqSoft.AzureCppUtils.targets'))" />
+    <Error Condition="!Exists('..\packages\SiddiqSoft.SplitUri.1.7.0\build\native\SiddiqSoft.SplitUri.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.SplitUri.1.7.0\build\native\SiddiqSoft.SplitUri.targets'))" />
+    <Error Condition="!Exists('..\packages\SiddiqSoft.restcl.0.6.1\build\native\SiddiqSoft.restcl.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.restcl.0.6.1\build\native\SiddiqSoft.restcl.targets'))" />
   </Target>
 </Project>
