--- a/nuget/SiddiqSoft.CosmosClient.nuspec
+++ b/nuget/SiddiqSoft.CosmosClient.nuspec
@@ -25,7 +25,8 @@
     <dependencies>
       <dependency id="nlohmann.json" version="3.10"/>
       <dependency id="SiddiqSoft.AzureCppUtils" version="1.2"/>
-      <dependency id="SiddiqSoft.restcl" version="0.8"/>
+      <dependency id="SiddiqSoft.restcl" version="0.9"/>
+      <dependency id="SiddiqSoft.asynchrony-lib" version="0.9"/>
     </dependencies>
   </metadata>
 
