--- a/tests/packages.config
+++ b/tests/packages.config
@@ -5,6 +5,7 @@
   <package id="SiddiqSoft.acw32h" version="2.7.0" targetFramework="native" />
   <package id="SiddiqSoft.asynchrony-lib" version="0.9.1" targetFramework="native" />
   <package id="SiddiqSoft.AzureCppUtils" version="1.2.9" targetFramework="native" />
+  <package id="SiddiqSoft.format-helpers" version="1.0.3" targetFramework="native" />
   <package id="SiddiqSoft.restcl" version="0.9.2" targetFramework="native" />
   <package id="SiddiqSoft.RunOnEnd" version="1.2.0" targetFramework="native" />
   <package id="SiddiqSoft.RWLEnvelope" version="1.1.0" targetFramework="native" />
