Added async and simplified the API

--- a/tests/packages.config
+++ b/tests/packages.config
@@ -11,4 +11,5 @@
   <package id="SiddiqSoft.RWLEnvelope" version="1.1.0" targetFramework="native" />
   <package id="SiddiqSoft.SplitUri" version="1.8.2" targetFramework="native" />
   <package id="SiddiqSoft.string2map" version="2.3.0" targetFramework="native" />
+  <package id="SiddiqSoft.TimeThis" version="1.1.4" targetFramework="native" />
 </packages>
