--- a/nuget/SiddiqSoft.CosmosClient.nuspec
+++ b/nuget/SiddiqSoft.CosmosClient.nuspec
@@ -28,7 +28,8 @@
       <dependency id="SiddiqSoft.restcl" version="0.9"/>
       <dependency id="SiddiqSoft.asynchrony-lib" version="0.9"/>
       <dependency id="SiddiqSoft.format-helpers" version="1.0.3"/>
-    </dependencies>
+      <dependency id="SiddiqSoft.TimeThis" version="1"/>
+	</dependencies>
   </metadata>
 
   <!--
