--- a/tests/basic_tests.vcxproj
+++ b/tests/basic_tests.vcxproj
@@ -65,6 +65,7 @@
     <Import Project="..\packages\SiddiqSoft.asynchrony-lib.0.9.1\build\native\SiddiqSoft.asynchrony-lib.targets" Condition="Exists('..\packages\SiddiqSoft.asynchrony-lib.0.9.1\build\native\SiddiqSoft.asynchrony-lib.targets')" />
     <Import Project="..\packages\SiddiqSoft.restcl.0.9.2\build\native\SiddiqSoft.restcl.targets" Condition="Exists('..\packages\SiddiqSoft.restcl.0.9.2\build\native\SiddiqSoft.restcl.targets')" />
     <Import Project="..\packages\SiddiqSoft.format-helpers.1.0.3\build\native\SiddiqSoft.format-helpers.targets" Condition="Exists('..\packages\SiddiqSoft.format-helpers.1.0.3\build\native\SiddiqSoft.format-helpers.targets')" />
+    <Import Project="..\packages\SiddiqSoft.TimeThis.1.1.4\build\native\SiddiqSoft.TimeThis.targets" Condition="Exists('..\packages\SiddiqSoft.TimeThis.1.1.4\build\native\SiddiqSoft.TimeThis.targets')" />
   </ImportGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -130,5 +131,6 @@
     <Error Condition="!Exists('..\packages\SiddiqSoft.asynchrony-lib.0.9.1\build\native\SiddiqSoft.asynchrony-lib.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.asynchrony-lib.0.9.1\build\native\SiddiqSoft.asynchrony-lib.targets'))" />
     <Error Condition="!Exists('..\packages\SiddiqSoft.restcl.0.9.2\build\native\SiddiqSoft.restcl.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.restcl.0.9.2\build\native\SiddiqSoft.restcl.targets'))" />
     <Error Condition="!Exists('..\packages\SiddiqSoft.format-helpers.1.0.3\build\native\SiddiqSoft.format-helpers.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.format-helpers.1.0.3\build\native\SiddiqSoft.format-helpers.targets'))" />
+    <Error Condition="!Exists('..\packages\SiddiqSoft.TimeThis.1.1.4\build\native\SiddiqSoft.TimeThis.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SiddiqSoft.TimeThis.1.1.4\build\native\SiddiqSoft.TimeThis.targets'))" />
   </Target>
 </Project>
