--- a/nuget/SiddiqSoft.CosmosClient.nuspec
+++ b/nuget/SiddiqSoft.CosmosClient.nuspec
@@ -1,50 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
 
-  <!--
+	<!--
 		First meta data information about the package itself.
 		Documentation can be found at: (or via nuget.org)
 		https://docs.microsoft.com/en-us/nuget/reference/nuspec#optional-metadata-elements
 	-->
-  <metadata>
-    <!-- required: -->
-    <id>SiddiqSoft.CosmosClient</id>
-    <version>$VERSION$</version>
-    <authors>SiddiqSoft</authors>
-    <description>Azure Cosmos REST-API Client for Modern C++</description>
-    <tags>json-api azure azure-cosmos-db cosmos sql-native rest-api native nativepackage cpp</tags>
-    <projectUrl>https://github.com/SiddiqSoft/CosmosClient</projectUrl>
-    <repository type="git" url="https://github.com/SiddiqSoft/CosmosClient" />
-    <requireLicenseAcceptance>true</requireLicenseAcceptance>
-    <license type="expression">BSD-3-Clause</license>
-    <icon>docs\Siddiq-Software-Avatar.png</icon>
-    <readme>docs\README.md</readme>
-    <releaseNotes>Documentation is over at https://siddiqsoft.github.io/CosmosClient/</releaseNotes>
-    <copyright>Copyright (c) 2021 Siddiq Software LLC</copyright>
-    <!-- Dependencies -->
-    <dependencies>
-      <dependency id="nlohmann.json" version="3.10"/>
-      <dependency id="SiddiqSoft.AzureCppUtils" version="1.2"/>
-      <dependency id="SiddiqSoft.restcl" version="0.9"/>
-      <dependency id="SiddiqSoft.asynchrony-lib" version="0.9"/>
-      <dependency id="SiddiqSoft.format-helpers" version="1.0.3"/>
-      <dependency id="SiddiqSoft.TimeThis" version="1"/>
-	</dependencies>
-  </metadata>
+	<metadata>
+		<!-- required: -->
+		<id>SiddiqSoft.CosmosClient</id>
+		<version>$VERSION$</version>
+		<authors>SiddiqSoft</authors>
+		<description>Azure Cosmos REST-API Client for Modern C++</description>
+		<tags>json-api azure azure-cosmos-db cosmos sql-native rest-api native nativepackage cpp</tags>
+		<projectUrl>https://github.com/SiddiqSoft/CosmosClient</projectUrl>
+		<repository type="git" url="https://github.com/SiddiqSoft/CosmosClient" />
+		<requireLicenseAcceptance>true</requireLicenseAcceptance>
+		<license type="expression">BSD-3-Clause</license>
+		<icon>docs\Siddiq-Software-Avatar.png</icon>
+		<readme>docs\README.md</readme>
+		<releaseNotes>Documentation is over at https://siddiqsoft.github.io/CosmosClient/</releaseNotes>
+		<copyright>Copyright (c) 2021 Siddiq Software LLC</copyright>
+		<!-- Dependencies -->
+		<dependencies>
+			<dependency id="nlohmann.json" version="3.10"/>
+			<dependency id="SiddiqSoft.acw32h" version="2"/>
+			<dependency id="SiddiqSoft.asynchrony-lib" version="0.10"/>
+			<dependency id="SiddiqSoft.AzureCppUtils" version="1"/>
+			<dependency id="SiddiqSoft.format-helpers" version="1"/>
+			<dependency id="SiddiqSoft.restcl" version="0.9.4"/>
+			<dependency id="SiddiqSoft.RunOnEnd" version="1"/>
+			<dependency id="SiddiqSoft.RWLEnvelope" version="1"/>
+			<dependency id="SiddiqSoft.SplitUri" version="1"/>
+			<dependency id="SiddiqSoft.string2map" version="2"/>
+			<dependency id="SiddiqSoft.TimeThis" version="1"/>
 
-  <!--
+		</dependencies>
+	</metadata>
+
+	<!--
 		Specify the content for your package.
 		This is only a packing list, no build semantic is defined here!
 		Stick to conventions described by nuget.org:
 		https://docs.microsoft.com/en-us/nuget/create-packages/creating-a-package#from-a-convention-based-working-directory
 	-->
-  <files>
-    <!-- includes -->
-    <file src="..\src\*.hpp" target="build\native\include\siddiqsoft\" />
-    <file src="Siddiq-Software-Avatar.png" target="docs\" />
-    <file src="..\README.md" target="docs\" />
+	<files>
+		<!-- includes -->
+		<file src="..\src\*.hpp" target="build\native\include\siddiqsoft\" />
+		<file src="Siddiq-Software-Avatar.png" target="docs\" />
+		<file src="..\README.md" target="docs\" />
 
-    <!-- MSBuild .targets files -->
-    <file src="SiddiqSoft.CosmosClient.targets" target="build\native" />
-  </files>
+		<!-- MSBuild .targets files -->
+		<file src="SiddiqSoft.CosmosClient.targets" target="build\native" />
+	</files>
 </package>
